--- a/.github/workflows/configs/label-pr.yml
+++ b/.github/workflows/configs/label-pr.yml
@@ -10,7 +10,7 @@
 - regExp: ".*test.*"
   labels: [Testing]
 
-- regExp: "(.*\.rst)|(.*\.md)"
+- regExp: "(.*[.]rst)|(.*[.]md)"
   labels: [Documentation]
   
   
